--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,7 @@
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "wpackagist-theme/blankslate": "^2021.0",
-    "timber/timber": "^1.19",
-    "wpackagist-plugin/timber-library": "^1.19"
+    "timber/timber": "^1.19"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
