--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,9 @@
     "roots/wordpress": "5.8.1",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "wpackagist-theme/blankslate": "^2021.0",
-    "timber/timber": "^1.19"
+    "timber/timber": "^1.19",
+    "wpackagist-plugin/autoptimize": "^2.9",
+    "wpackagist-plugin/cache-enabler": "^1.8"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
