--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     "wpackagist-plugin/autoptimize": "^2.9",
     "wpackagist-plugin/cache-enabler": "^1.8",
     "mnsami/composer-custom-directory-installer": "^2.0",
-    "htmlburger/carbon-fields": "^3.3"
+    "htmlburger/carbon-fields": "^3.3",
+    "wpackagist-plugin/svg-support": "^2.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.6.0",
