--- a/web/app/themes/printcor/resources/package.json
+++ b/web/app/themes/printcor/resources/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "watch": "npx tailwindcss -i ./style.css -o ../static/main.css --watch",
-    "build": "npx tailwindcss -i ./style.css -o ../static/main.css"
+    "build": "npx tailwindcss -i ./style.css -o ../static/main.css --minify"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.19"
-  },
   "dependencies": {
     "@splidejs/splide": "^3.2.1",
-    "@tailwindcss/forms": "^0.3.4"
+    "@tailwindcss/forms": "^0.5.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
